# cccrypt

./: CMakeLists.txt  LICENSE  README.md
src/: CryptManager.cpp  CryptManager.hpp  cccrypt.cpp
